client - App.jsx: react router setup

--- a/client/src/partials/_colors.scss
+++ b/client/src/partials/_colors.scss
@@ -1,12 +1,12 @@
-$white: #FFF;
+$white: hsla(0, 0%, 100% , 1);
 
-$light_mint: #93E1D5;
-$dark_mint: #0AC5A8;
+$light_mint: hsla(171, 57%, 73% , 1);
+$dark_mint: hsla(171, 90%, 41% , 1);
 
-$light_blue: #559bd1;
-$dark_blue: #285A84;
+$light_blue: hsla(206, 57%, 58% , 1);
+$dark_blue: hsla(207, 53%, 34% , 0.7);
 
-$light_grey: #D3D3D3;
-$dark_grey: #A9A9A9;
+$light_grey: hsla(0, 0%, 83% , 1);
+$dark_grey: hsla(0, 0%, 66% , 1);
 
-$black: #000;
+$black: hsla(0, 0%, 0% , 1);
