--- a/client/src/partials/_colors.scss
+++ b/client/src/partials/_colors.scss
@@ -6,6 +6,9 @@ $dark_mint: hsla(171, 90%, 41% , 1);
 $light_blue: hsla(206, 57%, 58% , 1);
 $dark_blue: hsla(207, 53%, 34% , 0.7);
 
+$light_purple: rgba(176, 146, 206, 0.978);
+$dark_purple: rgb(75, 18, 149);
+
 $light_grey: hsla(0, 0%, 83% , 1);
 $dark_grey: hsla(0, 0%, 66% , 1);
 
