--- a/client/src/components/header/Header.scss
+++ b/client/src/components/header/Header.scss
@@ -1,14 +1,17 @@
 @use '../../partials/breakpoints' as *;
 @use '../../partials/colors' as *;
 @use '../../partials/textstyles' as *;
-@use '../../partials/typeface' as *;
 
 .header {
     &__container {
-        background-image: url('../../assets/images/header-img.jpg');
+        background-image: 
+            linear-gradient(to bottom, rgba(245, 246, 252, 0.52), rgba(73, 19, 117, 0.374)), 
+            url('../../assets/images/header-img.jpg');
         width: 100%;
         background-size: cover;
         background-position: center;
+        color: $dark_purple;
+        font-family: 'Montserrat';
     }
     &__wrapper {
         position: relative;
@@ -29,5 +32,10 @@
     }
     &__heading {
         margin: 0;
+        font-weight: 400;
+    }
+    &__motto {
+        font-weight: 400;
+        font-style: italic;
     }
 }
